# deployshield

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  SECURITY.md  TODO.md  gemini-extension.json  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: lint-pr-title.yml  release-please.yml  test.yml
commands/: deployshield-status.md  deployshield-status.toml
docs/: configuration.md  internals.md
docs/design/: 2026-03-25-dx-improvements-and-gemini-support.md  2026-03-25-recursive-wrapper-normalization-design.md
docs/design/plans/: 2026-03-25-dx-and-gemini-support.md
docs/superpowers/plans/: 2026-03-29-gemini-cli-compatibility.md  2026-03-29-gemini-support.md
docs/superpowers/specs/: 2026-03-25-recursive-wrapper-normalization-design.md
hooks/: claude-hooks.json  hooks.gemini.json  hooks.json
hooks/scripts/: validate-cloud-command.py
skills/deployshield/: SKILL.md
skills/gemini/: SKILL.md
tests/: conftest.py  test_cloud_providers.py  test_command_splitting.py  test_context_blocking.py  test_databases.py  test_iac_tools.py  test_integration.py  test_normalization.py  test_other_providers.py
